--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,8 +1,8 @@
 .container {
   width: 100%;
   height: 48px;
-  background-color: gray;
+  background-color: none;
   text-align: end;
   padding: 12px 40px;
-  color: white;
+  color: black;
 }
