--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -4,7 +4,7 @@
   padding: 8px;
   text-indent: 5px;
   font-size: medium;
-  width: 280px;
+  width: 400px;
   position: relative;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -33,9 +33,9 @@
 }
 
 .searchContainer {
-  height: 100px;
+  height: 160px;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
 }
 
