--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,13 @@
 .container {
   text-align: center;
-  margin-right: 36px;
+  margin-right: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container img {
+  margin-top: 50px;
+  height: 200px;
+  width: 200px;
 }
